fix: spacing and spelling correction

--- a/src/styles/components/CompletedChallenges.module.css
+++ b/src/styles/components/CompletedChallenges.module.css
@@ -1,19 +1,19 @@
-.completedChallengsContainer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.completedChallengesContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-    margin: 3.5rem 0;
-    padding-bottom: 1rem;
-    border-bottom: 1px solid #D7D8DA;
+  margin: 3.5rem 0;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #d7d8da;
 
-    font-weight: 500;
+  font-weight: 500;
 }
 
-.completedChallengsContainer span:first-child {
-    font-size: 1.25rem;
+.completedChallengesContainer span:first-child {
+  font-size: 1.25rem;
 }
 
-.completedChallengsContainer span:last-child {
-    font-size: 1.5rem;
+.completedChallengesContainer span:last-child {
+  font-size: 1.5rem;
 }
